changes all over the flow

--- a/src/main.css
+++ b/src/main.css
@@ -19,7 +19,7 @@
 }
 /* background: linear-gradient(to bottom right, #1a5a96, #52c29a); */
 .btn {
-  padding: 20px 20px;
+  /* padding: 20px 20px; */
   border: none;
   outline: none;
   position: relative;
